add, tabs frames to credentials view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CredentialsActivity"
+            android:theme="@style/AppTheme.Credentials"></activity>
     </application>
 
 </manifest>
