--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".CredentialsActivity"
-            android:theme="@style/AppTheme.Credentials"></activity>
+        <activity android:name=".LoginActivity" android:theme="@style/AppTheme.Credentials" />
+        <activity android:name=".RegisterActivity"  android:theme="@style/AppTheme.Credentials"></activity>
     </application>
 
 </manifest>
