--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.soa4id.tec.jnavarro.sportec">
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -38,7 +38,8 @@
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.Launcher.NoActionBar"></activity>
+            android:theme="@style/AppTheme.Launcher.NoActionBar" />
+        <activity android:name=".TeamsActivity"></activity>
     </application>
 
 </manifest>
